Enable JDBC connection to Hive and JDBC-specific user impersonation per server  (#171)
* Bundle Hive JDBC jars, make setting queryTimeout optional

* bring down version of hive-jdbc.jar for CDH

* bring down version for hive-service.jar, restore hive-jdbc.jar version

* bring down versions for both hive jars

* added types tests

* added server-based named query Hive JDBC test

* copy hive-report.sql to nodes

* changed hive URL to use hadoop hostname

* enable independent JDBC impersonation

* updated README

* moved setting of queryTimeout to getPreparedStatement method

* Added support for Hive/JDBC with Kerberos

* Fix unit test testTransactionIsolationSetByUserToUnsupportedValue

* Fix updateImpersonationPropertyInHiveJdbcUrl

* PR review changes

--- a/server/pxf-service/src/templates/user/templates/jdbc-site.xml
+++ b/server/pxf-service/src/templates/user/templates/jdbc-site.xml
@@ -79,4 +79,12 @@
     </property>
     -->
 
+    <!--
+    <property>
+        <name>pxf.impersonation.jdbc</name>
+        <value>true</value>
+        <description>Impersonate Greenplum user when connecting to the remote database</description>
+    </property>
+    -->
+
 </configuration>
