--- a/docs/content/objstore_cfg.html.md.erb
+++ b/docs/content/objstore_cfg.html.md.erb
@@ -8,7 +8,7 @@ You can use PXF to access Azure Data Lake, Azure Blob Storage, Google Cloud Stor
 
 ## <a id="about_cfg"></a>About Object Store Configuration
 
-To access data in an object store, you must provide a server location and client credentials. When you configure a PXF object store connector, you add at least one named PXF server configuration for the connector as described in [About PXF Server Configuration](cfg_server.html#cfgproc).
+To access data in an object store, you must provide a server location and client credentials. When you configure a PXF object store connector, you add at least one named PXF server configuration for the connector as described in [Configuring PXF Servers](cfg_server.html).
 
 PXF provides a template configuration file for each object store connector. These template files are located in the `$PXF_CONF/templates/` directory.
 
@@ -67,7 +67,7 @@ The template configuration file for S3 is `$PXF_CONF/templates/s3-site.xml`. Whe
 
 If required, fine-tune PXF S3 connectivity by specifying properties identified in the [S3A](https://hadoop.apache.org/docs/current/hadoop-aws/tools/hadoop-aws/index.html#S3A) section of the Hadoop-AWS module documentation in your `s3-site.xml` server configuration file.
 
-You can override an S3 server configuration by directly specifying the S3 access ID and secret key via custom options in the CREATE EXTERNAL TABLE command LOCATION clause. Refer to [Overriding the S3 Server Configuration](access_objstore.html#s3_override) for additional information.
+You can override an S3 server configuration by directly specifying the S3 access ID and secret key via custom options in the CREATE EXTERNAL TABLE command LOCATION clause. Refer to [Overriding the S3 Server Configuration with DDL](access_objstore.html#s3_override) for additional information.
 
 
 #### <a id="s3-sse"></a>Configuring S3 Server-Side Encryption
