--- a/docs/content/objstore_fileasrow.html.md.erb
+++ b/docs/content/objstore_fileasrow.html.md.erb
@@ -43,7 +43,7 @@ The specific keywords and values used in the [CREATE EXTERNAL TABLE](../ref_guid
 | FILE\_AS\_ROW=true    | The required option that instructs PXF to read each file into a single table row. |
 | FORMAT | The `FORMAT` must specify `'CSV'`.  |
 
-If you are accessing an S3 object store, you can provide S3 credentials directly in the `CREATE EXTERNAL TABLE` command as described in [Overriding the S3 Server Configuration](access_objstore.html#s3_override).
+If you are accessing an S3 object store, you can provide S3 credentials directly in the `CREATE EXTERNAL TABLE` command as described in [Overriding the S3 Server Configuration with DDL](access_objstore.html#s3_override).
 
 ## <a id="example"></a>Example
 
