Enable JDBC Connection Pooling (#186)
* WIP

* tests for connection pool

* Added empty line

Co-authored-by: Alexander Denissov <adenissov@pivotal.io>
Co-authored-by: Raymond Yin <ryin@pivotal.io>

* Updated documentation

Co-authored-by: Alexander Denissov <adenissov@pivotal.io>
Co-authored-by: Raymond Yin <ryin@pivotal.io>

* Addressed PR feedback, fixed Hive isValid() not being supported

Co-authored-by: Alexander Denissov <adenissov@pivotal.io>
Co-authored-by: Raymond Yin <ryin@pivotal.io>

* Add private constructor for ConnectionManager

Initialize cached threadpool and loading cache in constructor

Co-authored-by: Alexander Denissov <adenissov@pivotal.io>
Co-authored-by: Raymond Yin <ryin@pivotal.io>

* Added tests for datasource eviction and closure

Co-authored-by: Alexander Denissov <adenissov@pivotal.io>
Co-authored-by: Raymond Yin <ryin@pivotal.io>

--- a/server/pxf-service/src/templates/user/templates/jdbc-site.xml
+++ b/server/pxf-service/src/templates/user/templates/jdbc-site.xml
@@ -21,6 +21,38 @@
         <description>Password for connecting to the database (e.g. postgres)</description>
     </property>
 
+    <!-- Connection Pool properties -->
+    <!-- You can use properties described here: https://github.com/brettwooldridge/HikariCP
+         except for the following ones: dataSourceClassName, jdbcUrl, username, password,
+         dataSource.user, dataSource.password
+    -->
+    <property>
+        <name>jdbc.pool.enabled</name>
+        <value>true</value>
+        <description>Use connection pool for JDBC</description>
+    </property>
+
+    <property>
+        <name>jdbc.pool.property.maximumPoolSize</name>
+        <value>5</value>
+        <description>The maximum number of actual connections to the database backend</description>
+    </property>
+    <property>
+        <name>jdbc.pool.property.connectionTimeout</name>
+        <value>30000</value>
+        <description>The maximum time (in milliseconds) to wait for a connection from the pool</description>
+    </property>
+    <property>
+        <name>jdbc.pool.property.idleTimeout</name>
+        <value>30000</value>
+        <description>The maximum time (in milliseconds) that a connection will sit idle in the pool</description>
+    </property>
+    <property>
+        <name>jdbc.pool.property.minimumIdle</name>
+        <value>0</value>
+        <description>The minimum number of idle connections to maintain in the pool</description>
+    </property>
+
     <!-- Statement level properties -->
     <!--
     <property>
