docs - make pxf overview page more friendly (#9610)
* docs - make pxf overview page more friendly

* address comments from david

* include db2 and msoft sql server in list of sql dbs supported

--- a/docs/content/jdbc_cfg.html.md.erb
+++ b/docs/content/jdbc_cfg.html.md.erb
@@ -2,7 +2,7 @@
 title: Configuring the JDBC Connector (Optional)
 ---
 
-You can use PXF to access an external SQL database including MySQL, ORACLE, PostgreSQL, Hive, and Apache Ignite. This topic describes how to configure the PXF JDBC Connector to access these external data sources.
+You can use PXF to access an external SQL database including MySQL, ORACLE, Microsoft SQL Server, DB2, PostgreSQL, Hive, and Apache Ignite. This topic describes how to configure the PXF JDBC Connector to access these external data sources.
 
 *If you do not plan to use the PXF JDBC Connector, then you do not need to perform this procedure.*
 
