docs - pxf [cluster] sync now supports a delete option (#9631)
* docs - pxf [cluster] sync now supports a delete option

* option and argument

* replace single dash with unicode

* misc edir

--- a/docs/content/ref/pxf.html.md.erb
+++ b/docs/content/ref/pxf.html.md.erb
@@ -62,7 +62,7 @@ You can start, stop, or restart the PXF service instance on a specific segment h
 <dd>Stop the PXF service instance running on the segment host.</dd>
 
 <dt>sync  </dt>
-<dd>Synchronize the PXF configuration from the master to a specific Greenplum Database standby master or segment host. You must run `pxf sync` on the master host. See [Options](pxf.html#options).</dd>
+<dd>Synchronize the PXF configuration (`$PXF_CONF`) from the master to a specific Greenplum Database standby master or segment host. You must run `pxf sync` on the master host. By default, this command updates files on and copies files to the remote. You can instruct PXF to also delete files during the synchronization; see [Options](#options).</dd>
 
 <dt>version  </dt>
 <dd>Display the PXF version and then exit.</dd>
@@ -71,18 +71,21 @@ You can start, stop, or restart the PXF service instance on a specific segment h
 
 The `pxf init` command takes the following option:
 
-<dt>-y </dt>
+<dt>&#8211;y </dt>
 <dd>Do not prompt, use the default `$PXF_CONF` directory location if the environment variable is not set.</dd>
 
 The `pxf reset` command takes the following option:
 
-<dt>-f | --force </dt>
+<dt>&#8211;f | &#8211;&#8211;force </dt>
 <dd>Do not prompt before resetting the PXF service instance; reset without user interaction.</dd>
 
-The `pxf sync` command, run on the Greenplum Database master host, takes the following option:
+The `pxf sync` command, which you must run on the Greenplum Database master host, takes the following option and argument:
+
+<dt>&#8211;d | &#8211;&#8211;delete </dt>
+<dd>Delete any files in the PXF user configuration on `<gphost>` that are not also present on the master host. If you specify this option, you must provide it on the command line before `<gphost>`.</dd>
 
 <dt>\<gphost\> </dt>
-<dd>The Greenplum Database host to which to synchronize the PXF configuration. `<gphost>` must identify the standy master host or a segment host.</dd>
+<dd>The Greenplum Database host to which to synchronize the PXF configuration. Required. `<gphost>` must identify the standy master host or a segment host.</dd>
 
 ## <a id="topic1__section5"></a>Examples
 
