--- a/docs/content/ref/pxf-cluster.html.md.erb
+++ b/docs/content/ref/pxf-cluster.html.md.erb
@@ -7,7 +7,7 @@ Manage the PXF configuration and the PXF service instance on all Greenplum Datab
 ## <a id="topic1__section2"></a>Synopsis
 
 ``` pre
-pxf cluster <command>
+pxf cluster <command> [<option>]
 ```
 
 where `<command>` is:
@@ -61,7 +61,15 @@ The `pxf cluster` utility command manages PXF on the master, standby master, and
 <dd>Stop the PXF service instance on all segment hosts.</dd>
 
 <dt>sync  </dt>
-<dd>Synchronize the PXF configuration from the master to the standby master and to all Greenplum Database segment hosts. If you have updated the PXF user configuration or added JAR files, you must also restart PXF after you synchronize the PXF configuration.</dd>
+<dd>Synchronize the PXF configuration (`$PXF_CONF`) from the master to the standby master and to all Greenplum Database segment hosts. By default, this command updates files on and copies files to the remote. You can instruct PXF to also delete files during the synchronization; see [Options](#options).</dd>
+<dd>If you have updated the PXF user configuration or added JAR files, you must also restart PXF after you synchronize the PXF configuration.</dd>
+
+## <a id="options"></a>Options
+
+The `pxf cluster sync` command takes the following option:
+
+<dt>&#8211;d | &#8211;&#8211;delete </dt>
+<dd>Delete any files in the PXF user configuration on the standby master and segment hosts that are not also present on the master host.</dd>
 
 ## <a id="topic1__section5"></a>Examples
 
@@ -69,6 +77,12 @@ Stop the PXF service instance on all segment hosts:
 
 ``` shell
 $ $GPHOME/pxf/bin/pxf cluster stop
+```
+
+Synchronize the PXF configuration to the standby and all segment hosts, deleting files that do not exist on the master host:
+
+``` shell
+$ $GPHOME/pxf/bin/pxf cluster sync --delete
 ```
 
 ## <a id="topic1__section6"></a>See Also
